[package]
name = "jbeam_to_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3       # Optimize for speed
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
serde = {version = "1.0"}
serde_json = "1.0"
mlua = {version = "0.9.1", features = ["luajit", "vendored", "serialize"]}
zip="0.6.6"